--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,10 @@
 name = "smoothed_z_score"
 description = "Smoothed z-score algo (very robust thresholding algorithm)"
 keywords = [ "peaks", "signal", "timeseries", "z-score", "dispersion", "peak-detection" ]
+homepage = "https://github.com/swizard0/smoothed_z_score"
+repository = "https://github.com/swizard0/smoothed_z_score"
 readme = "README.md"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Jean-Paul", "Alexey Voznyuk <me@swizard.info>"]
 license = "MIT"
 
