--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "smoothed_z_score"
 description = "Smoothed z-score algo (very robust thresholding algorithm)"
-keywords = [ "peaks", "signal", "timeseries", "z-score", "dispersion", "peak-detection" ]
+keywords = [ "signal", "timeseries", "z-score", "dispersion", "peak-detection" ]
 homepage = "https://github.com/swizard0/smoothed_z_score"
 repository = "https://github.com/swizard0/smoothed_z_score"
 readme = "README.md"
